# Vault-Direct-Data-API-Accelerators

./: .gitignore  README.md  pyproject.toml  requirements.txt
accelerators/databricks/: accelerator.py
accelerators/databricks/connections/: databricks_connection.py
accelerators/databricks/resources/: connector_config.json  vapil_settings.json
accelerators/databricks/scripts/: direct_data_to_object_storage.py  download_and_unzip_direct_data_files.py  extract_doc_content.py  load_data.py
accelerators/databricks/services/: databricks_service.py  vault_service.py
accelerators/fabric/: accelerator.py
accelerators/fabric/connections/: fabric_connection.py
accelerators/fabric/resources/: connector_config.json
accelerators/fabric/services/: fabric_service.py
accelerators/redshift/: accelerator.py
accelerators/redshift/connections/: redshift_connection.py
accelerators/redshift/resources/: connector_config.json
accelerators/redshift/scripts/: direct_data_to_object_storage.py  download_and_unzip_direct_data_files.py  extract_doc_content.py  load_data.py
accelerators/snowflake/: accelerator.py
accelerators/sql_database/: accelerator.py
accelerators/sqlite/: accelerator.py
common/: utilities.py
common/api/client/: vault_client.py
common/connections/: database_connection.py
common/scripts/: direct_data_to_object_storage.py  download_and_unzip_direct_data_files.py  extract_doc_content.py  load_data.py  retrieve_doc_text.py
common/services/: aws_s3_service.py  azure_blob_service.py  database_service.py  object_storage_service.py  vault_service.py
(+35 files in other folders)
